src/main/java/com/example/WeatherSensor/util/validation/groups/SensorNameUniquenessValidationGroup.java
package com.example.WeatherSensor.util.validation.groups;

public interface SensorNameUniquenessValidationGroup {
}
