src/main/java/com/example/WeatherSensor/util/errors/SensorNotCreatedException.java
package com.example.WeatherSensor.util.errors;

public class SensorNotCreatedException extends RuntimeException{

    public SensorNotCreatedException(String msg){
        super(msg);
    }
}
